--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "eslint": "^8.39.0",
     "eslint-plugin-vue": "^9.11.0",
     "prettier": "^2.8.8",
+    "sass": "^1.62.1",
+    "util": "^0.12.5",
     "vite": "^4.3.4"
   }
 }
